feat: axios, authentication, private routes and logout
using axios to perform API requests, authentication with the token generated by the backend, private
routes and etc...

BREAKING CHANGE: removal of some components of the Material UI that will be used again later

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -2,5 +2,10 @@
   margin: 0;
   padding: 0;
   outline: 0;
-  box-sizing: border
+  box-sizing: border;
+  font-size: 14px;
+}
+
+body{
+  background-color: #f8f8f8;
 }
