--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,5 +9,6 @@
 }
 
 body{
+  font-family: 'Quicksand', sans-serif;
   background-color: #f8f8f8;
 }
