--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap');
 
 * {
   margin: 0;
@@ -9,6 +9,6 @@
 }
 
 body{
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f8f8f8;
 }
